--- a/ej_membership.html
+++ b/ej_membership.html
@@ -17,7 +17,7 @@
         
         <title>Register</title>
 
-        <link rel="icon" href="ASSETS/ej_smallLogo.png">
+        <link rel="icon" href="Assets/ej_smallLogo.png">
         <link rel="stylesheet" href="CSS/ej_base.css">
         <link rel="stylesheet" href="CSS/ej_styling.css">
         <script src="Javascript/baseJS.js" defer></script>
