--- a/ej_home.html
+++ b/ej_home.html
@@ -16,9 +16,10 @@
         
         <title>Home</title>
 
-        <link rel="icon" href="ASSETS/ej_smallLogo.png">
+        <link rel="icon" href="Assets/ej_smallLogo.png">
         <link rel="stylesheet" href="CSS/ej_base.css">
         <link rel="stylesheet" href="CSS/ej_styling.css">
+        <script src="Javascript/baseJS.js" defer></script>
         <link rel="stylesheet" href="CSS/ej_slider.css">
         <script src="Javascript/baseJS.js" defer></script>
     </head>
