--- a/ej_contactus.html
+++ b/ej_contactus.html
@@ -15,8 +15,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <title>Membership</title>
-
-        <link rel="icon" href="ASSETS/ej_smallLogo.png">
+        
+        <link rel="icon" href="Assets/ej_smallLogo.png">
         <link rel="stylesheet" href="CSS/ej_base.css">
         <link rel="stylesheet" href="CSS/ej_styling.css">
         <script src="Javascript/baseJS.js" defer></script>
