--- a/ej_home.html
+++ b/ej_home.html
@@ -40,21 +40,21 @@
             <div class="mSlider">
                 <div class="slides">
                     <div class="slide">
-                        <img src="ASSETS/EJ_GYM10.jpg" alt="Welcome">
+                        <img src="Assets/EJ_GYM10.jpg" alt="Welcome">
                         <div class="sContent">
                             <h1>Welcome to<br> EL JIM</h1>
                             <p>We put the tipico in <br>your fitness experience.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="ASSETS/EJ_GYM6.jpg" alt="Never judged">
+                        <img src="Assets/EJ_GYM6.jpg" alt="Never judged">
                         <div class="sContent">
                             <h1>Training</h1>
                             <p>Never feel  judged in your <br> fitness journey</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="ASSETS/ej_GYM3.jpg" alt="Facilities">
+                        <img src="Assets/EJ_GYM3.jpg" alt="Facilities">
                         <div class="sContent">
                             <h1>Facilities</h1>
                             <p>Well kept facilites <br>
