--- a/ej_home.html
+++ b/ej_home.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="Assets/EJ_GYM3.jpg" alt="Facilities">
+                        <img src="Assets/ej_GYM3.jpg" alt="Facilities">
                         <div class="sContent">
                             <h1>Facilities</h1>
                             <p>Well kept facilites <br>
