--- a/ej_membership.html
+++ b/ej_membership.html
@@ -22,6 +22,10 @@
         <link rel="stylesheet" href="CSS/ej_styling.css">
         <script src="Javascript/baseJS.js" defer></script>
         <script src="Javascript/validationForm.js" defer></script>
+
+        <style>
+            background: url('Assets/ej_GYM2.jpg') no-repeat center center/cover;
+        </style>
     </head>
     <body>
         <header class="gymHeader">
