--- a/ej_membership.html
+++ b/ej_membership.html
@@ -24,7 +24,7 @@
         <script src="Javascript/validationForm.js" defer></script>
 
         <style>
-            background: url('Assets/ej_GYM2.jpg') no-repeat center center/cover;
+            background-image: url('Assets/ej_GYM2.jpg') no-repeat center center/cover;
         </style>
     </head>
     <body>
