--- a/ej_membership.html
+++ b/ej_membership.html
@@ -24,7 +24,9 @@
         <script src="Javascript/validationForm.js" defer></script>
 
         <style>
-            background-image: url('Assets/ej_GYM2.jpg') no-repeat center center/cover;
+            .membershipPage{
+            background: url('Assets/ej_GYM2.jpg') no-repeat center center/cover;
+            }
         </style>
     </head>
     <body>
